--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "^7.8.0",
+    "npm": "^1.0.0"
+  },
   "author": "Volodymyr Lut",
   "license": "ISC",
   "dependencies": {
